<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_agendamentos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_agendamentos" />
        <item
            android:id="@+id/nav_servicos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_servicos" />
        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_produtos" />
    </group>
</menu>