<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hassamapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_servicos"
            app:destination="@id/nav_servicos" />
        <action
            android:id="@+id/action_nav_home_to_nav_agendamentos"
            app:destination="@id/nav_agendamentos" />
        <action
            android:id="@+id/action_nav_home_to_nav_produtos"
            app:destination="@id/nav_produtos" />
    </fragment>

    <fragment
        android:id="@+id/nav_agendamentos"
        android:name="com.example.hassamapp.ui.agendamentos.AgendamentosFragment"
        android:label="@string/menu_agendamentos"
        tools:layout="@layout/fragment_agendamentos" />

    <fragment
        android:id="@+id/nav_servicos"
        android:name="com.example.hassamapp.ui.servicos.ServicosFragment"
        android:label="@string/menu_servicos"
        tools:layout="@layout/fragment_servicos" />

    <fragment
        android:id="@+id/nav_produtos"
        android:name="com.example.hassamapp.ui.produtos.ProdutosFragment"
        android:label="@string/menu_produtos"
        tools:layout="@layout/fragment_produtos" />
</navigation>